Documentation update and author filter bug fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,14 @@
-2008-03-15      Sebastian Holtermann  <sebholt@web.de>
+2008-04-15      Sebastian Holtermann  <sebholt@web.de>
 
-	* Database: New DOI field
-	* Database: URL field for authors. This was disabled up to now. BE only
-	* List: Automatic link generation for DOI fields (Bjoern Pedersen)
-	* List: Support for the author URL field
 	* List: Support for file_url restrictions depending on the FE user group and the file_url ending
-	* List: Automatic sorting by publication state. #Published' first, 'in preparation' at last.
+	* List: Automatic sorting by publication state. 'published' first, 'in preparation' at last.
 	* List: Character set conversion from DB -> Display was removed entirely - Bjoern Pedersen
 	* Filter: New filter option for the keywords field - Bjoern Pedersen
 	* Filter: Added missing state filter option for 'in preparation'
 	* Filter: New 'Search in all fields' filter
 	* Editor: FE user group access to the FE editor can be configured in TS - Bjoern Pedersen
-	* Import: BibTeX import improvements e. g. for german umlauts - Bjoern Pedersen
+	* Import: BibTeX import improvements for german umlauts - Bjoern Pedersen
+	* Documentation: Updated
 	* Code: Cleanups and improvements
 	* Release version 0.5.5
 
