--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,4 @@
-2009-05-26      Sebastian Holtermann  <sebholt@web.de>
+2009-03-06      Sebastian Holtermann  <sebholt@web.de>
 	* List: New search bar
 	* List: New author browser bar
 	* List: New preferences bar
@@ -13,7 +13,7 @@
 	* Database: New Publication types: Thesis, Manuscript, Report
 	* Database: New Fields: tags, web_url, web_url2, misc2, 
 	            institute, event_name, event_place, event_date, 
-	            language, ISSN, full_text, full_text_tstamp
+	            language, ISSN, full_text, full_text_tstamp, number2
 	* Documentation: Updated
 	* General: More localized labels
 	* General: New one for all 'charset' variable
