--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-07-01      Sebastian Holtermann  <sebholt@web.de>
+	* General: New single view (disabled by default)
+	* List: Year navigation bar starts with the _current_ year instead of with _all_ years
+
 2009-03-06      Sebastian Holtermann  <sebholt@web.de>
 	* List: New search bar
 	* List: New author browser bar
