--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,14 @@
+2009-08-14      Sebastian Holtermann  <sebholt@web.de>
+	* General: If no storage is set the current page will be used as storage
+	* General: Normal pages can be storages even from the BE (C. Metter)
+	* Editor: Fixed not appearing "Add" icon
+	* Documentation: Updated PDF documentation
+	* Release version 0.7.1
+
 2009-07-01      Sebastian Holtermann  <sebholt@web.de>
 	* General: New single view (disabled by default)
 	* List: Year navigation bar starts with the _current_ year instead of with _all_ years
+	* Release version 0.7
 
 2009-03-06      Sebastian Holtermann  <sebholt@web.de>
 	* List: New search bar
