--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-09-23      Sebastian Holtermann  <sebholt@web.de>
+	* Database: The data types of affiliation and booktitle are changed 
+	            from tinytext to text which is longer (D. Sauveron).
+	* Editor: The input fields for affiliation and booktitle are bigger.
+	* Release version 0.7.2
+
 2009-08-14      Sebastian Holtermann  <sebholt@web.de>
 	* General: If no storage is set the current page will be used as storage
 	* General: Normal pages can be storages even from the BE (C. Metter)
