--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 2009-11-04      Sebastian Holtermann  <sebholt@web.de>
+	* Full text cache: Proper shell argument escaping for pdftotext
+	* Release version 0.7.7
+
+2009-11-04      Sebastian Holtermann  <sebholt@web.de>
 	* Full text cache: Time and number limit for full text cache updates.
 	                   This should help to avoid hitting a PHP CPU/Time limit.
 	* Full text cache: Check if a temporary file could be created
