--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2009-11-04      Sebastian Holtermann  <sebholt@web.de>
 	* Full text cache: Proper shell argument escaping for pdftotext
+	* Documentation: Updated PDF documentation
 	* Release version 0.7.7
 
 2009-11-04      Sebastian Holtermann  <sebholt@web.de>
