--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-11-05      Sebastian Holtermann  <sebholt@web.de>
+	* List: Fixed broken link creation when file_url contained ampersand characters
+	* List: PHP cleanups which resulted in nice speedups
+	* Release version 0.7.8
+
 2009-11-04      Sebastian Holtermann  <sebholt@web.de>
 	* Full text cache: Proper shell argument escaping for pdftotext
 	* Documentation: Updated PDF documentation
