Renamed authorship table

--- a/Resources/Private/Language/locallang_db.xml
+++ b/Resources/Private/Language/locallang_db.xml
@@ -15,10 +15,10 @@
 			<label index="tx_bib_domain_model_author_forename">Forename</label>
 			<label index="tx_bib_domain_model_author_surname">Surname</label>
 			<label index="tx_bib_domain_model_author_url">File URL</label>
-			<label index="tx_bib_authorships">Bib authorships</label>
-			<label index="tx_bib_authorships_author_id">Author UID</label>
-			<label index="tx_bib_authorships_pub_id">Publication UID</label>
-			<label index="tx_bib_authorships_sorting">Sorting</label>
+			<label index="tx_bib_domain_model_authorships">Bib authorships</label>
+			<label index="tx_bib_domain_model_authorships_author_id">Author UID</label>
+			<label index="tx_bib_domain_model_authorships_pub_id">Publication UID</label>
+			<label index="tx_bib_domain_model_authorships_sorting">Sorting</label>
 			<label index="tx_bib_domain_model_reference">Bib publication references</label>
 			<label index="tx_bib_domain_model_reference_ISBN">ISBN</label>
 			<label index="tx_bib_domain_model_reference_ISSN">ISSN</label>
@@ -103,10 +103,10 @@
 			<label index="tx_bib_domain_model_author_forename">Vorname</label>
 			<label index="tx_bib_domain_model_author_surname">Nachname</label>
 			<label index="tx_bib_domain_model_author_url">Datei / URL</label>
-			<label index="tx_bib_authorships">Bib Autorenschaften</label>
-			<label index="tx_bib_authorships_author_id">Autoren UID</label>
-			<label index="tx_bib_authorships_pub_id">Publikation UID</label>
-			<label index="tx_bib_authorships_sorting">Sortierung</label>
+			<label index="tx_bib_domain_model_authorships">Bib Autorenschaften</label>
+			<label index="tx_bib_domain_model_authorships_author_id">Autoren UID</label>
+			<label index="tx_bib_domain_model_authorships_pub_id">Publikation UID</label>
+			<label index="tx_bib_domain_model_authorships_sorting">Sortierung</label>
 			<label index="tx_bib_domain_model_reference">Bib Publikationsreferenzen</label>
 			<label index="tx_bib_domain_model_reference_ISBN">ISBN</label>
 			<label index="tx_bib_domain_model_reference_ISSN">ISSN</label>
@@ -187,9 +187,9 @@
 			<label index="tx_bib_domain_model_author_authors">Autori</label>
 			<label index="tx_bib_domain_model_author_forename">Nome</label>
 			<label index="tx_bib_domain_model_author_surname">Cognome</label>
-			<label index="tx_bib_authorships">Bib authorships</label>
-			<label index="tx_bib_authorships_author_id">Author UID</label>
-			<label index="tx_bib_authorships_pub_id">UID Pubblicazione</label>
+			<label index="tx_bib_domain_model_authorships">Bib authorships</label>
+			<label index="tx_bib_domain_model_authorships_author_id">Author UID</label>
+			<label index="tx_bib_domain_model_authorships_pub_id">UID Pubblicazione</label>
 			<label index="tx_bib_domain_model_reference">Bib publication references</label>
 			<label index="tx_bib_domain_model_reference_ISBN">ISBN</label>
 			<label index="tx_bib_domain_model_reference_abstract">Sommario</label>
