--- a/Resources/Private/Language/locallang.xml
+++ b/Resources/Private/Language/locallang.xml
@@ -41,6 +41,7 @@
 			<label index="olabel_thesis_type">Thesis type</label>
 			<label index="olabel_university">University</label>
 			<label index="olabel_year_month_day">Date (Y-M-D)</label>
+
 			<label index="search_fields_authors">Author</label>
 			<label index="search_fields_bibtype">Bibliography type</label>
 			<label index="search_fields_ISBN">ISBN</label>
@@ -91,6 +92,58 @@
 			<label index="search_fields_web_url2">Web URL 2</label>
 			<label index="search_fields_web_url2_date">Web URL 2 Last Checked</label>
 			<label index="search_fields_year">Year</label>
+
+			<label index="sort_fields_bibtype">Bibliography type</label>
+			<label index="sort_fields_ISBN">ISBN</label>
+			<label index="sort_fields_ISSN">ISSN</label>
+			<label index="sort_fields_abstract">Abstract</label>
+			<label index="sort_fields_address">Address</label>
+			<label index="sort_fields_affiliation">Affiliation</label>
+			<label index="sort_fields_annotation">Annotation</label>
+			<label index="sort_fields_booktitle">Book title</label>
+			<label index="sort_fields_borrowed_by">Borrowed by</label>
+			<label index="sort_fields_chapter">Chapter</label>
+			<label index="sort_fields_citeid">Citation ID</label>
+			<label index="sort_fields_day">Day</label>
+			<label index="sort_fields_DOI">DOI</label>
+			<label index="sort_fields_edition">Edition</label>
+			<label index="sort_fields_editor">Editor</label>
+			<label index="sort_fields_event_date">Event date</label>
+			<label index="sort_fields_event_name">Event name</label>
+			<label index="sort_fields_event_place">Event place</label>
+			<label index="sort_fields_extern">External</label>
+			<label index="sort_fields_file_url">File URL</label>
+			<label index="sort_fields_howpublished">How published</label>
+			<label index="sort_fields_in_library">Is in library</label>
+			<label index="sort_fields_institute">Institute</label>
+			<label index="sort_fields_institution">Institution</label>
+			<label index="sort_fields_journal">Journal</label>
+			<label index="sort_fields_keywords">Keywords</label>
+			<label index="sort_fields_language">Language</label>
+			<label index="sort_fields_misc">Custom</label>
+			<label index="sort_fields_misc2">Custom 2</label>
+			<label index="sort_fields_month">Month</label>
+			<label index="sort_fields_note">Note</label>
+			<label index="sort_fields_number">Number</label>
+			<label index="sort_fields_number2">Number 2</label>
+			<label index="sort_fields_organization">Organization</label>
+			<label index="sort_fields_pages">Pages</label>
+			<label index="sort_fields_publisher">Publisher</label>
+			<label index="sort_fields_reviewed">Reviewed</label>
+			<label index="sort_fields_school">School</label>
+			<label index="sort_fields_series">Series</label>
+			<label index="sort_fields_state">State</label>
+			<label index="sort_fields_surname">Author</label>
+			<label index="sort_fields_tags">Tags</label>
+			<label index="sort_fields_title">Title</label>
+			<label index="sort_fields_type">Work type</label>
+			<label index="sort_fields_volume">Volume</label>
+			<label index="sort_fields_web_url">Web URL</label>
+			<label index="sort_fields_web_url_date">Web URL Last Checked</label>
+			<label index="sort_fields_web_url2">Web URL 2</label>
+			<label index="sort_fields_web_url2_date">Web URL 2 Last Checked</label>
+			<label index="sort_fields_year">Year</label>
+
 			<label index="tx_bib_domain_model_reference_hidden">Hidden</label>
 			<label index="tx_bib_domain_model_reference_pid">Storage folder</label>
 			<label index="tx_bib_domain_model_reference_uid">uid</label>
